--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=3306;Database=blockchaindb;User=admin;Password=admin;"
+  },
+  "Jwt": {
+    "Key": "your-secret-key-min-32-characters-long-for-security",
+    "Issuer": "BlockchainApp",
+    "Audience": "BlockchainAppUsers",
+    "ExpiryInHours": 24
+  }
 }
