--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -14,5 +14,8 @@
     "Issuer": "BlockchainApp",
     "Audience": "BlockchainAppUsers",
     "ExpiryInHours": 24
+  },
+  "FabricGateway": {
+      "BaseUrl": "http://localhost:3001"
   }
 }
