temp setpoint before big changes

--- a/fabric/gateway/Dockerfile
+++ b/fabric/gateway/Dockerfile
@@ -9,21 +9,24 @@ RUN go mod download
 
 COPY . .
 
-RUN CGO_ENABLED=1 GOOS=linux go build -a -installsuffix cgo -o fabric-gateway .
+RUN CGO_ENABLED=1 GOOS=linux go build -a -o fabric-gateway .
 
+# Runtime
 FROM alpine:latest
 
-RUN apk --no-cache add ca-certificates tzdata
+RUN apk --no-cache add ca-certificates wget
 
 WORKDIR /app
 
 COPY --from=builder /app/fabric-gateway .
-
 COPY docker-entrypoint.sh .
 RUN chmod +x docker-entrypoint.sh
 
 RUN mkdir -p config wallet
 
 EXPOSE 3001
+
+HEALTHCHECK --interval=10s --timeout=5s --start-period=10s --retries=3 \
+  CMD wget -q --spider http://localhost:3001/health || exit 1
 
 ENTRYPOINT ["./docker-entrypoint.sh"]
