--- a/fabric/docker-compose.yml
+++ b/fabric/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 networks:
   fabric_network:
     name: fabric_network
@@ -65,6 +63,7 @@ services:
       - "7053:7053"
       - "9443:9443"
     volumes:
+      - ./config/orderer.yaml:/etc/hyperledger/fabric/orderer.yaml
       - ./organizations/ordererOrganizations/example.com/orderers/orderer.example.com/msp:/var/hyperledger/orderer/msp
       - ./organizations/ordererOrganizations/example.com/orderers/orderer.example.com/tls:/var/hyperledger/orderer/tls
       - orderer.example.com:/var/hyperledger/production/orderer
@@ -109,7 +108,9 @@ services:
       - "9444:9444"
     volumes:
       - /var/run/docker.sock:/host/var/run/docker.sock
-      - ./organizations/peerOrganizations/org1.example.com/peers/peer0.org1.example.com:/etc/hyperledger/fabric
+      - ./config/core.yaml:/etc/hyperledger/fabric/core.yaml
+      - ./organizations/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/msp:/etc/hyperledger/fabric/msp
+      - ./organizations/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/tls:/etc/hyperledger/fabric/tls
       - peer0.org1.example.com:/var/hyperledger/production
     depends_on:
       - couchdb0
