--- a/fabric/config/core.yaml
+++ b/fabric/config/core.yaml
@@ -142,7 +142,7 @@ peer:
     orgMembersAllowedAccess: false
 
 vm:
-  endpoint: unix:///host/var/run/docker.sock
+  endpoint: unix:///var/run/docker.sock
   docker:
     tls:
       enabled: false
