--- a/fabric/config/core.yaml
+++ b/fabric/config/core.yaml
@@ -170,11 +170,7 @@ chaincode:
     runtime: $(DOCKER_NS)/fabric-javaenv:$(TWO_DIGIT_VERSION)
   node:
     runtime: $(DOCKER_NS)/fabric-nodeenv:$(TWO_DIGIT_VERSION)
-  externalBuilders:
-    - name: ccaas_builder
-      path: /opt/hyperledger/ccaas_builder
-      propagateEnvironment:
-        - CHAINCODE_AS_A_SERVICE_BUILDER_CONFIG
+  externalBuilders: []
   installTimeout: 300s
   startuptimeout: 300s
   executetimeout: 30s
