--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -17,5 +17,8 @@
   },
   "FabricGateway": {
       "BaseUrl": "http://localhost:3001"
+  },
+  "Fabric": {
+    "GatewayUrl": "http://localhost:3001"
   }
 }
