--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -19,6 +19,7 @@
       "BaseUrl": "http://localhost:3001"
   },
   "Fabric": {
+    "Enabled": false,
     "GatewayUrl": "http://localhost:3001"
   }
 }
